[project]
name = "sol-sys-py"
version = "0.1.0"
description = ""
authors = [
    {name = "MardisTech",email = "mardistech@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "sol_sys"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
